--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
         </div>
     </main>
     <footer class="footer">
-    
     </footer>
-    <script src="/src/bundle.js"></script>
+    <script src="src/bundle.js"></script>
 </body>
-
 </html>
